--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
           <version>3.5.0</version>
           <configuration>
           <suiteXmlFiles>
-          <suiteXmlFile></suiteXmlFile>>
+          <suiteXmlFile>testng.xml</suiteXmlFile>>
           </suiteXmlFiles>
         </configuration>
         </plugin>
