--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         </plugin>
         
      
-        <plugin>
+<!--         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.0</version>
@@ -31,7 +31,7 @@
           <suiteXmlFile>testng.xml</suiteXmlFile>>
           </suiteXmlFiles>
         </configuration>
-        </plugin>
+        </plugin> -->
 
       </plugins>
       
