--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.0</version>
           <configuration>
-          <suiteXmlFiles>
+<!--           <suiteXmlFiles>
           <suiteXmlFile>testng.xml</suiteXmlFile>>
-          </suiteXmlFiles>
+          </suiteXmlFiles> -->
         </configuration>
         </plugin>
 
