--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.0</version>
           <configuration>
+          <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>>
+          </suiteXmlFiles>
         </configuration>
         </plugin>
 
