--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <properties>
   <maven.complier.source>17</maven.complier.source>
   <maven.complier.target>17</maven.complier.target>
-  <suiteFile></suiteFile>
+  <suiteFile>${suiteFile}</suiteFile>
   </properties>
          
   <build>
